Fix: Update CORS configuration to allow frontend localhost:5173